syntax = "proto3";
package houston.service.webhook;

option java_package = "houston.vo.webhook";
option java_multiple_files = true;

import "vo/webhook/Contributor.proto";

// 업로드 Payload
message UploadPayload
{
  string projectId = 1;
  string assignee = 2;
  string title = 3;
  string ref = 4;
  string head = 5;
  repeated string commitFile = 6;
  repeated houston.vo.webhook.Contributor contributor = 7;
}
