syntax = "proto3";
package houston.vo.webhook.gitlab;

option java_package = "houston.vo.webhook.gitlab";
option java_multiple_files = true;

// Push 이벤트
message PushEvent
{
  string before = 1;
  string after = 2;
  string ref = 3;
  int64 user_id = 4;
  string project_id = 5;
}
